# hxo

./: .gitignore  Cargo.toml  Readme.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml
.github/workflows/: ci.yml
compilers/hxo-bundler/: Cargo.toml  README.md
compilers/hxo-bundler/src/: lib.rs
compilers/hxo-bundler/tests/: bundler_test.rs
compilers/hxo-cli/: Cargo.toml
compilers/hxo-cli/src/: main.rs
compilers/hxo-compiler/: Cargo.toml  README.md
compilers/hxo-compiler/src/: lib.rs
compilers/hxo-compiler/src/codegen/: mod.rs
compilers/hxo-compiler/tests/: benchmark.rs  compiler_integration.rs
compilers/hxo-hydrate/: Cargo.toml  README.md
compilers/hxo-hydrate/src/: lib.rs
compilers/hxo-hydrate/tests/: hydrate_test.rs
compilers/hxo-ir/: Cargo.toml  README.md
compilers/hxo-ir/src/: lib.rs
compilers/hxo-ir/tests/: ir_test.rs
compilers/hxo-lsp/: Cargo.toml  README.md
compilers/hxo-lsp/src/: lib.rs
compilers/hxo-optimizer/: Cargo.toml  README.md
compilers/hxo-optimizer/src/: lib.rs
compilers/hxo-optimizer/tests/: optimizer_test.rs
compilers/hxo-parser/: Cargo.toml  README.md
compilers/hxo-parser-css/: Cargo.toml  README.md
compilers/hxo-parser-css/src/: lib.rs
compilers/hxo-parser-css/tests/: css_test.rs
compilers/hxo-parser-expression/: Cargo.toml  README.md
compilers/hxo-parser-expression/src/: lib.rs
compilers/hxo-parser-expression/tests/: expr_test.rs
compilers/hxo-parser-fluent/: Cargo.toml
compilers/hxo-parser-fluent/src/: lib.rs
compilers/hxo-parser-fluent/tests/: fluent_test.rs
compilers/hxo-parser-json/: Cargo.toml  README.md
compilers/hxo-parser-json/src/: lib.rs
compilers/hxo-parser-json/tests/: json_test.rs
compilers/hxo-parser-less/: Cargo.toml  README.md
compilers/hxo-parser-less/src/: lib.rs
compilers/hxo-parser-less/tests/: less_test.rs
compilers/hxo-parser-markdown/: Cargo.toml  README.md
compilers/hxo-parser-markdown/src/: lib.rs
compilers/hxo-parser-markdown/tests/: markdown_test.rs
compilers/hxo-parser-properties/: Cargo.toml
compilers/hxo-parser-properties/src/: lib.rs
compilers/hxo-parser-properties/tests/: properties_test.rs
compilers/hxo-parser-pug/: Cargo.toml
compilers/hxo-parser-pug/src/: lib.rs
compilers/hxo-parser-pug/tests/: pug_test.rs
compilers/hxo-parser-rust/: Cargo.toml
compilers/hxo-parser-rust/src/: lib.rs
compilers/hxo-parser-rust/tests/: rust_test.rs
compilers/hxo-parser-sass/: Cargo.toml  README.md
compilers/hxo-parser-sass/src/: lib.rs
compilers/hxo-parser-sass/tests/: sass_test.rs
compilers/hxo-parser-scss/: Cargo.toml  README.md
compilers/hxo-parser-scss/src/: lib.rs
compilers/hxo-parser-scss/tests/: scss_test.rs
compilers/hxo-parser-stylus/: Cargo.toml  README.md
compilers/hxo-parser-stylus/src/: lib.rs
compilers/hxo-parser-stylus/tests/: stylus_test.rs
compilers/hxo-parser-tailwind/: Cargo.toml  README.md
compilers/hxo-parser-tailwind/src/: lib.rs
compilers/hxo-parser-tailwind/tests/: integration_test.rs  tailwind_test.rs
compilers/hxo-parser-template/: Cargo.toml  README.md
compilers/hxo-parser-template/src/: lib.rs
compilers/hxo-parser-template/tests/: template_test.rs
compilers/hxo-parser-toml/: Cargo.toml
compilers/hxo-parser-toml/src/: lib.rs
compilers/hxo-parser-toml/tests/: toml_test.rs
compilers/hxo-parser-typescript/: Cargo.toml  README.md
compilers/hxo-parser-typescript/src/: lib.rs
compilers/hxo-parser-typescript/tests/: ts_test.rs
compilers/hxo-parser-yaml/: Cargo.toml  README.md
compilers/hxo-parser-yaml/src/: lib.rs
compilers/hxo-parser-yaml/tests/: yaml_test.rs
compilers/hxo-parser/src/: base.rs  lib.rs  registry.rs
compilers/hxo-parser/tests/: parser_test.rs
compilers/hxo-script-analyzer/: Cargo.toml
compilers/hxo-script-analyzer/src/: lib.rs
compilers/hxo-script-analyzer/tests/: analyzer_test.rs
compilers/hxo-source-map/: Cargo.toml  README.md
compilers/hxo-source-map/src/: lib.rs
compilers/hxo-source-map/tests/: source_map_test.rs
compilers/hxo-ssr/: Cargo.toml  README.md
compilers/hxo-ssr/src/: lib.rs
compilers/hxo-ssr/tests/: ssr_test.rs
compilers/hxo-style-processor/: Cargo.toml
compilers/hxo-style-processor/src/: lib.rs
compilers/hxo-style-processor/tests/: style_processor_test.rs
compilers/hxo-target-css/: Cargo.toml
compilers/hxo-target-css/src/: lib.rs
compilers/hxo-target-css/tests/: css_test.rs
compilers/hxo-target-dts/: Cargo.toml
compilers/hxo-target-dts/src/: lib.rs
compilers/hxo-target-dts/tests/: dts_test.rs
compilers/hxo-target-html/: Cargo.toml
compilers/hxo-target-html/src/: lib.rs
compilers/hxo-target-html/tests/: html_test.rs
compilers/hxo-target-js/: Cargo.toml
compilers/hxo-target-js/src/: lib.rs
compilers/hxo-target-js/tests/: js_test.rs
compilers/hxo-target-map/: Cargo.toml
compilers/hxo-target-map/src/: lib.rs
compilers/hxo-target-map/tests/: map_test.rs
compilers/hxo-target-wasm/: Cargo.toml
compilers/hxo-target-wasm/src/: lib.rs
compilers/hxo-target-wasm/tests/: wasm_test.rs
compilers/hxo-types/: Cargo.toml  README.md
compilers/hxo-types/src/: lib.rs
compilers/hxo-types/tests/: types_test.rs
compilers/hxo-wit/: Cargo.toml
compilers/hxo-wit/src/: lib.rs
compilers/hxo-wit/tests/: wit_test.rs
compilers/hxo-wit/wit/: hxo.wit
examples/playground/: index.html  package.json  vite.config.ts
examples/playground/src/: App.hxo  Demo.hxo  constants.ts  hxo.d.ts  main.ts  monaco-helper.ts  test.hxo
runtimes/hxo-cli/: package.json
runtimes/hxo-cli/src/: index.ts
runtimes/hxo-core/: package.json
runtimes/hxo-core/src/: i18n.ts  index.ts  reactivity.ts  scheduler.ts  vdom.ts
runtimes/hxo-core/tests/: reactivity.test.ts
runtimes/hxo-dom/: package.json  tsconfig.json
runtimes/hxo-shared/: package.json
runtimes/hxo-ssr/: package.json  rolldown.config.js  tsconfig.json
runtimes/hxo-vscode/: language-configuration.json  package.json  rolldown.config.js
runtimes/hxo-wasm32-wasi/: package.json  test.js
scripts/: check-file-size.ts  coverage.ts
(+7 files in other folders)
