[package]
name = "hxo-bundler"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

description = "Bundler for HXO framework"
keywords = ["hxo", "bundler"]
categories = ["compilers"]

[dependencies]
hxo-types.workspace = true
hxo-ir.workspace = true
hxo-compiler.workspace = true
serde.workspace = true
serde_json.workspace = true
