[package]
name = "hxo-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Command line interface for HXO framework"
keywords = ["hxo", "cli", "compiler"]
categories = ["development-tools"]

[dependencies]
hxo-compiler.workspace = true
hxo-lsp.workspace = true
hxo-types.workspace = true
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
color-eyre = "0.6"
indicatif = "0.17"
console = "0.15"

[[bin]]
name = "hxo"
path = "src/main.rs"
