[package]
name = "hxo-compiler"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

description = "Compiler core for HXO framework"
keywords = ["hxo", "compiler"]
categories = ["compilers"]

[dependencies]
hxo-types.workspace = true
hxo-parser.workspace = true
hxo-ir.workspace = true
hxo-optimizer.workspace = true
hxo-source-map.workspace = true
hxo-target-js.workspace = true
hxo-target-html.workspace = true
hxo-target-css.workspace = true
hxo-target-dts.workspace = true
hxo-target-wasm.workspace = true
hxo-ssr.workspace = true
hxo-hydrate.workspace = true
hxo-parser-template.workspace = true
hxo-parser-expression.workspace = true
hxo-parser-yaml.workspace = true
hxo-parser-json.workspace = true
hxo-parser-toml.workspace = true
hxo-parser-properties.workspace = true
hxo-parser-fluent.workspace = true
hxo-parser-css.workspace = true
hxo-parser-scss.workspace = true
hxo-parser-sass.workspace = true
hxo-parser-less.workspace = true
hxo-parser-pug.workspace = true
hxo-parser-markdown.workspace = true
hxo-parser-stylus.workspace = true
hxo-parser-tailwind.workspace = true
serde.workspace = true

[dev-dependencies]