[package]
name = "hxo-hydrate"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

description = "Hydration support for HXO framework"
keywords = ["hxo", "hydrate", "web"]
categories = ["compilers"]

[dependencies]
hxo-types.workspace = true
hxo-ir.workspace = true
hxo-target-js.workspace = true
