[package]
name = "hxo-ir"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

description = "Intermediate Representation for HXO framework"
keywords = ["hxo", "ir", "compiler"]
categories = ["compilers"]

[dependencies]
hxo-types.workspace = true
serde = { workspace = true }
