[package]
name = "hxo-lsp"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Language Server Protocol implementation for HXO"
keywords = ["hxo", "lsp", "ide"]
categories = ["development-tools"]

[dependencies]
hxo-types.workspace = true
hxo-ir.workspace = true
hxo-parser.workspace = true
hxo-parser-template.workspace = true
hxo-parser-expression.workspace = true
hxo-parser-toml.workspace = true
hxo-compiler.workspace = true
tower-lsp.workspace = true
dashmap.workspace = true
serde.workspace = true
url.workspace = true
tokio = { workspace = true, features = ["full"] }
