[package]
name = "hxo-optimizer"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

description = "Optimizer for HXO framework"
keywords = ["hxo", "optimizer"]
categories = ["compilers"]

[dependencies]
hxo-types.workspace = true
hxo-ir.workspace = true
hxo-parser-tailwind.workspace = true
