[package]
name = "hxo-parser-css"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "CSS parser and optimizer for HXO framework"
keywords = ["hxo", "css", "parser"]
categories = ["parsing"]

[dependencies]
hxo-types.workspace = true
hxo-parser.workspace = true
hxo-ir.workspace = true
serde.workspace = true
