[package]
name = "hxo-parser-expression"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "HXO Template Expression language parser"
keywords = ["hxo", "expression", "parser"]
categories = ["parsing"]

[dependencies]
hxo-types.workspace = true
hxo-parser.workspace = true
hxo-ir.workspace = true
