[package]
name = "hxo-parser-fluent"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Fluent parser for HXO framework"
keywords = ["hxo", "fluent", "parser"]
categories = ["parsing"]

[dependencies]
hxo-types.workspace = true
hxo-parser.workspace = true
hxo-ir.workspace = true
serde.workspace = true
