[package]
name = "hxo-parser-json"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "JSON parser for HXO framework"
keywords = ["hxo", "json", "parser"]
categories = ["parsing"]

[dependencies]
hxo-types.workspace = true
hxo-parser.workspace = true
hxo-ir.workspace = true
serde.workspace = true
