[package]
name = "hxo-parser-less"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Less parser for HXO framework"
keywords = ["hxo", "less", "parser"]
categories = ["parsing"]

[dependencies]
hxo-types.workspace = true
hxo-parser.workspace = true
hxo-ir.workspace = true
serde.workspace = true
