[package]
name = "hxo-parser-markdown"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Markdown parser for HXO framework"
keywords = ["hxo", "markdown", "parser"]
categories = ["parsing"]

[dependencies]
hxo-types.workspace = true
hxo-parser.workspace = true
