[package]
name = "hxo-parser-properties"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Properties parser for HXO framework"
keywords = ["hxo", "properties", "parser"]
categories = ["parsing"]

[dependencies]
hxo-types.workspace = true
hxo-parser.workspace = true
serde.workspace = true
