[package]
name = "hxo-parser-pug"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hxo-types = { workspace = true }
hxo-ir = { workspace = true }
hxo-parser = { workspace = true }
hxo-parser-expression = { workspace = true }
serde = { workspace = true }
