[package]
name = "hxo-parser-sass"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "SASS parser for HXO framework"
keywords = ["hxo", "sass", "parser"]
categories = ["parsing"]

[dependencies]
hxo-types.workspace = true
hxo-parser.workspace = true
hxo-ir.workspace = true
serde.workspace = true
