[package]
name = "hxo-parser-scss"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "SCSS parser for HXO framework"
keywords = ["hxo", "scss", "parser"]
categories = ["parsing"]

[dependencies]
hxo-types.workspace = true
hxo-parser.workspace = true
hxo-ir.workspace = true
serde.workspace = true
