[package]
name = "hxo-parser-stylus"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

description = "Stylus parser for HXO framework"
keywords = ["hxo", "stylus", "parser"]
categories = ["parsing"]

[dependencies]
hxo-types.workspace = true
hxo-parser.workspace = true
serde.workspace = true
