[package]
name = "hxo-parser-template"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Template parser for HXO framework"
keywords = ["hxo", "template", "parser"]
categories = ["parsing"]

[dependencies]
hxo-types.workspace = true
hxo-parser.workspace = true
hxo-ir.workspace = true
hxo-parser-expression.workspace = true
