[package]
name = "hxo-parser-toml"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "TOML parser for HXO framework"
keywords = ["hxo", "toml", "parser"]
categories = ["parsing"]

[dependencies]
hxo-types.workspace = true
hxo-parser.workspace = true
serde.workspace = true
serde_json.workspace = true
toml = "0.8"
