[package]
name = "hxo-parser-yaml"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "YAML parser for HXO framework"
keywords = ["hxo", "yaml", "parser"]
categories = ["parsing"]

[dependencies]
hxo-types.workspace = true
hxo-parser.workspace = true
hxo-ir.workspace = true
