[package]
name = "hxo-parser"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Core parser infrastructure for HXO framework"
keywords = ["hxo", "parser", "compiler"]
categories = ["parsing"]

[dependencies]
hxo-types.workspace = true
hxo-ir.workspace = true
hxo-script-analyzer.workspace = true
