[package]
name = "hxo-source-map"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Source map generation for HXO framework"
keywords = ["hxo", "source-map", "compiler"]
categories = ["development-tools"]

[dependencies]
hxo-types.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
