[package]
name = "hxo-ssr"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

description = "Server-Side Rendering support for HXO framework"
keywords = ["hxo", "ssr", "web"]
categories = ["compilers"]

[dependencies]
hxo-types.workspace = true
hxo-ir.workspace = true
hxo-target-js.workspace = true
