[package]
name = "hxo-target-dts"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

description = "TypeScript definitions target for HXO framework"
keywords = ["hxo", "dts", "compiler"]
categories = ["compilers"]

[dependencies]
hxo-types.workspace = true
hxo-ir.workspace = true
