[package]
name = "hxo-target-html"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

description = "HTML target for HXO framework"
keywords = ["hxo", "html", "compiler"]
categories = ["compilers"]

[dependencies]
hxo-types.workspace = true
hxo-ir.workspace = true
